# copy-creator

./: .gitignore  README.md  README_EN.md
copy-creator/: package.json  pnpm-lock.yaml
copy-creator/.superpowers/sdd/: fix-report.md
copy-creator/scripts/: copy-creator-ctl
copy-creator/src/: App.tsx  main.tsx
copy-creator/src-tauri/: Cargo.toml  tauri.conf.json
copy-creator/src-tauri/capabilities/: default.json
copy-creator/src-tauri/src/: autostart.rs  clipboard.rs  db.rs  ipc.rs  lib.rs  paste.rs  shortcut.rs  translator.rs  tray.rs
copy-creator/src/components/: Icons.tsx  IosSelect.tsx  SettingsContent.tsx  SettingsDialog.tsx
copy-creator/src/components/RadialMenu/: index.tsx
copy-creator/src/components/settings/: LanguageSection.tsx  ShortcutSection.tsx  StorageSection.tsx  TranslationSection.tsx  index.ts
copy-creator/src/i18n/: en.json  zh-CN.json
copy-creator/src/pages/: TranslationPage.tsx
copy-creator/src/pages/ClipboardPage/: ApiKeyLabelPanel.tsx  ClipboardCard.tsx  ImageThumb.tsx  index.tsx  utils.tsx
copy-creator/src/pages/PhrasePage/: GroupChips.tsx  GroupDialog.tsx  ManageGroupsDialog.tsx  PhraseDialog.tsx  (+2 more)
copy-creator/src/stores/: clipboardStore.ts  phraseStore.test.ts  phraseStore.ts  settingsStore.ts
copy-creator/src/styles/: base.css  clipboard.css  components.css  index.css  layout.css  phrases.css  radial-menu.css  settings.css  translation.css
copy-creator/src/types/: index.ts
copy-creator/src/utils/: reorderPreview.test.ts  reorderPreview.ts
docs/: ARCHITECTURE.md  PRD.md  linux-adaptation-plan.md  project_process.md
