[package]
name = "copy-creator"
version = "0.1.1"
description = "PC clipboard manager, quick phrases, and translation tool"
authors = ["Copy Creator Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-process = "2.3.1"
dirs = "5"
arboard = { version = "3", features = ["image-data"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
